--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 sudo: required
-service:
-    - docker
+language: generic
+
+services:
+  - docker
 
 before_install:
-  - docker build -t abdulbasitnawab/docker-react -f Dockerfile.dev .
+  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run abdulbasitnawab/docker-react npm run test -- -- coverage
+  - docker run -e CI=true stephengrider/docker-react npm run test
