--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: us-east-2
-  app: "docker-react"
-  env: "Dockerreact-env"
+  app: "docker-react-2"
+  env: "Dockerreact2-env"
   bucket_name: "elasticbeanstalk-us-east-2-204520103409"
-  bucket_path: "docker-react"
+  bucket_path: "docker-react-2"
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
